# ConvTriple

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  deps.sh
cheetah/: CMakeLists.txt  all.hpp  client.cpp  defs.hpp  proto.hpp  server.cpp
cheetah/include/gemini/cheetah/: hom_bn_ss.cc  hom_bn_ss.h  hom_conv2d_ss.cc  hom_conv2d_ss.h  hom_fc_ss.cc  hom_fc_ss.h  shape_inference.cc  sliced_3d_tensor.h  tensor.h  tensor_encoder.cc  tensor_encoder.h  tensor_types.h
cheetah/include/gemini/core/: logging.cc  types.cc
cheetah/include/gemini/core/util/: ThreadPool.h  math.cc  seal.h
cheetah/io/: io_channel.hpp  net_io_channel.hpp  send.hpp
cheetah/networks/: resnet50.hpp
cheetah/ot/: aes-ni.h  bit-triple-generator.h  block.h  cheetah-ot_pack.h  mitccrh.h  ot-utils.h  ot.h  prg.h  silent_ot.h
cheetah/protocols/: bn_direct_proto.hpp  bn_proto.hpp  conv_proto.hpp  fc_proto.hpp  ot_proto.hpp
patch/: SEAL.patch
src/: CMakeLists.txt  client.cpp  constants.hpp  queue.hpp  server.cpp
src/core/: all.hpp  benching.hpp  cheetah_interface.hpp  defs.cpp  defs.hpp  elem.hpp  hpmpc_interface.cpp  hpmpc_interface.hpp  keys.hpp  utils.cpp  utils.hpp
src/core/networks/: resnet50.hpp
src/core/protocols/: bn_direct_proto.hpp  bn_proto.hpp  conv_proto.hpp  fc_proto.hpp  multiplexer.hpp  ot_proto.hpp
src/include/gemini/cheetah/: CMakeLists.txt  hom_bn_ss.cc  hom_bn_ss.h  hom_conv2d_core.cu  hom_conv2d_core.cuh  hom_conv2d_ss.cc  hom_conv2d_ss.h  hom_fc_ss.cc  hom_fc_ss.h  shape_inference.h  tensor.h  tensor_encoder.cc  tensor_shape.cc  tensor_shape.h
src/include/gemini/core/: common.h  logging.h  types.h
src/include/gemini/core/util/: ThreadPool.h  math.h  seal.cc  timer.h
src/io/: file_io.hpp  io_channel.hpp  net_io_channel.hpp  send.cpp  send.hpp
src/ot/: aes-ni.h  aes.h  bit-triple-generator.h  block.h  cheetah-ot_pack.h  constants.h  mitccrh.h  ot-utils.h  ot.h  prg.h  silent_ot.h
src/troy/: conv2d_gpu.cu  conv2d_gpu.cuh
